Speichern und Laden von midfx Dateien. Selektion bewegen und löschen. Midis importieren und exportieren. SelectedNotes Attribut zum NoteManager hinzu. Bug behoben, bei dem die Channel nicht richtig freigegeben werden.